Full java 7 support